--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -126,3 +126,7 @@ CompanyUsedInDepartaments=Company ''{0}'' used in departaments
 AccessDeniedEdit=Access denied edit object ''{0}''
 AddObjectToGroupComplete=Object ''{0}'' add to group ''{1}'' completed!
 NoCheckedItems=No checked items!
+UserGroupsUsedInRights=Group ''{0}'' used in rights!
+ObjectDontHaveRightEdit=Object dont have right edit!
+RightsSettingCorrect=Setting rights is correct
+CheckRights=Check the setting of access rights!
