--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -570,3 +570,5 @@ AddToGroup=Add to group
 ConfirmAddToGroup=Confirm add objet to group!
 ConfirmMoveToTrash=Confirm move object to trash!
 CopySelected=Create property
+LicenceNumber=Licence number
+LicenseAgreement=License agreement
