--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -130,3 +130,7 @@ UserGroupsUsedInRights=Group ''{0}'' used in rights!
 ObjectDontHaveRightEdit=Object dont have right edit!
 RightsSettingCorrect=Setting rights is correct
 CheckRights=Check the setting of access rights!
+RightsInheritedForChilds=Rights to documents of this folder are inherited from the parent folder
+DocumentsHaveSpecRights=For documents this folder has special rights
+ObjectNotCopied=A copy of the object ''{0}'' is not available!
+MoveItemNotAvailable=The movement of the object ''{0}'' is not available!
