--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -33,8 +33,8 @@ Cancelled=Cancelled
 AccessRightsNoChanged=Access rights no changed
 RightIsParentCopy=Rights copied from the parent object
 RightEditNo=You do not have permissions to change the object ''{0}''!
-RightCreateNo=You do not have rights to create the object {0}!
-RightDeleteNo=If You do not have sufficient permissions to delete object {0}!
+RightCreateNo=You do not have rights to create the object ''{0}''!
+RightDeleteNo=If You do not have sufficient permissions to delete object ''{0}''!
 RightViewNo=You do not have permissions to view this item!
 FolderIsCopy=Folder copied!
 DocIsCopy=Document copied!
@@ -97,14 +97,14 @@ NO_SELECT_DOCS=No selected documents!
 IncorrectMailAdress=Incorrect e-mail adress!
 MessageSent=The message sent to ''{0}''!
 ConnectLDAPFailed=Failed connect to LDAP server!
-UserLoginIsExsist=A user with login {0} already exists!
+UserLoginIsExsist=A user with login ''{0}'' already exists!
 DeleteObjectHaveChildItems=The deleted object ''{0}'' has child objects!
-StaffUsedInDocs=Staff {0} used in the documents
-StaffUsedInUsers=Staff {0} unit tied to user accounts!
-PartnerUsedInDocs=The partner {0} used in documents!
-DocTypeUsedInDocs=The type {0} used in documents!
+StaffUsedInDocs=Staff ''{0}'' used in the documents
+StaffUsedInUsers=Staff ''{0}'' unit tied to user accounts!
+PartnerUsedInDocs=The partner ''{0}'' used in documents!
+DocTypeUsedInDocs=The type ''{0}'' used in documents!
 PartnerCodeIsExsist=Partner code {0} already exists!
-PartnerIsExsist=Partner {0} already exsist!
+PartnerIsExsist=Partner ''{0}'' already exsist!
 ObjectAddedToFavorites=The object ''{0}'' is added to favorites
 NotExecuted=Not executed!
 ObjectAlreadyAddedFavorites=The object ''{0}'' has already been previously added to favorites!
@@ -131,6 +131,6 @@ ObjectDontHaveRightEdit=Object dont have right edit!
 RightsSettingCorrect=Setting rights is correct
 CheckRights=Check the setting of access rights!
 RightsInheritedForChilds=Rights to documents of this folder are inherited from the parent folder
-DocumentsHaveSpecRights=For documents this folder has special rights
+DocumentsHaveSpecRights=For documents this folder has special rights. Set check for inherits!
 ObjectNotCopied=A copy of the object ''{0}'' is not available!
 MoveItemNotAvailable=The movement of the object ''{0}'' is not available!
