--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -134,3 +134,6 @@ RightsInheritedForChilds=Rights to documents of this folder are inherited from t
 DocumentsHaveSpecRights=For documents this folder has special rights. Set check for inherits!
 ObjectNotCopied=A copy of the object ''{0}'' is not available!
 MoveItemNotAvailable=The movement of the object ''{0}'' is not available!
+RightsInheritedForChildDocs=Rights to documents of this folder are inherited from the parent folder
+RightsNotInheritedForChilds=Rights for child items not innherit!
+RightsChildInheritIncorrect=Inherit incorrect for rights childs! Object dont have parent for inherit!
