--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -437,3 +437,6 @@ ConfirmMoveToTrash=Confirm move object to trash!
 CopySelected=Create property
 LicenceNumber=Licence number
 LicenseAgreement=License agreement
+RightsChilds=Rights for childs
+ResetSearcheCriteria=Reset searche criteries
+Reset=Reset
