--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -575,3 +575,6 @@ LicenseAgreement=License agreement
 RightsChilds=Rights for childs
 ResetSearcheCriteria=Reset searche criteries
 Reset=Reset
+DocumentPreviewIisNotAvailable=The document preview is not available. Download the document to your computer and open.
+DocStatuses=Documents statuses
+DocStatusesSelector=Document statuses selector
