--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -31,7 +31,7 @@ Info=Info
 DateCreate=Create date
 DocTypes=DocTypes
 DocCard=\u041a\u0430\u0440\u0442\u043e\u0447\u043a\u0430 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
-DocState=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
+DocState=State document
 Partner=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
 States=States
 StatesExpl=States explorer
@@ -440,3 +440,6 @@ LicenseAgreement=License agreement
 RightsChilds=Rights for childs
 ResetSearcheCriteria=Reset searche criteries
 Reset=Reset
+DocumentPreviewIisNotAvailable=The document preview is not available. Download the document to your computer and open.
+DocStatuses=Document statuses
+DocStatusesSelector=Document statuses selector
