--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -363,7 +363,7 @@ SaveServiceSettings=Save settings service
 Daily=Daily
 Monthly=Monthly
 Weekly=Weekly
-DateNextStart=Date nex start
+DateNextStart=Date next start
 Each=Each
 Minute=Minute
 Hour=Hour
@@ -578,3 +578,10 @@ Reset=Reset
 DocumentPreviewIisNotAvailable=The document preview is not available. Download the document to your computer and open.
 DocStatuses=Documents statuses
 DocStatusesSelector=Document statuses selector
+#\u0410\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u044b\u0439 \u0440\u0435\u043b\u0438\u0437
+ActualRelease=Actual release
+GoToSupport=GoToSupport
+CurrentRelease=Set release
+Date=Date
+DateRelease=Date release
+Page=Page
