--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -137,3 +137,7 @@ MoveItemNotAvailable=The movement of the object ''{0}'' is not available!
 RightsInheritedForChildDocs=Rights to documents of this folder are inherited from the parent folder
 RightsNotInheritedForChilds=Rights for child items not innherit!
 RightsChildInheritIncorrect=Inherit incorrect for rights childs! Object dont have parent for inherit!
+NoGetRealiseInfo=Failed to get information about the current release. Check the connection to the Internet.
+NewVersionAvailable=A new version is available!
+UsedActualVersion=Used latest version
+NeedUpdateProgram=You need to update the program!
