--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -585,3 +585,11 @@ CurrentRelease=Set release
 Date=Date
 DateRelease=Date release
 Page=Page
+PrintCardItem=Print item card
+PrintBarCode=Print barcode label
+ServerTime=Server time
+CreateStatus=Create status
+AddStatusInTypeDocs=Add status in types documents
+SaveClose=Save & Close
+SaveChange=Save change
+MustBeSpecifiedKey=Must be specified key
