--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -141,3 +141,4 @@ NoGetRealiseInfo=Failed to get information about the current release. Check the 
 NewVersionAvailable=A new version is available!
 UsedActualVersion=Used latest version
 NeedUpdateProgram=You need to update the program!
+AddStatusInSelectedDocumentTypes=Add status in the selected document types
