--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -593,3 +593,7 @@ AddStatusInTypeDocs=Add status in types documents
 SaveClose=Save & Close
 SaveChange=Save change
 MustBeSpecifiedKey=Must be specified key
+SaveSettings=Save settings
+Owner=Owner
+ChangeOwner=Change owner
+FolderType=File folder
