--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -142,3 +142,5 @@ NewVersionAvailable=A new version is available!
 UsedActualVersion=Used latest version
 NeedUpdateProgram=You need to update the program!
 AddStatusInSelectedDocumentTypes=Add status in the selected document types
+ObjectDontHaveRightView=Object dont have right view
+ObjectIsLockUser=Object ''{0}'' is lock user ''{1}''
