--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -458,3 +458,8 @@ AddStatusInTypeDocs=Add status in types documents
 SaveClose=Save & Close
 SaveChange=Save change
 MustBeSpecifiedKey=Must be specified key
+SaveSettings=Save settings
+Owner=Owner
+ChangeOwner=Change owner
+FolderType=File folder
+NotSpecified=Not specified
