--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -463,3 +463,13 @@ Owner=Owner
 ChangeOwner=Change owner
 FolderType=File folder
 NotSpecified=Not specified
+Message=Message
+Report=Report
+DocReportCountTypes=Count documents by type
+Reports=Reports
+PeriodSelected=The eligibility period
+DateEnd=Date end
+DateBegin=Date begin
+ADD_VERSION=Add version
+ViewCard=View card
+GetLinkForEdit=Get link for edit
