--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-welcom=Welcome to the program DATREON!
+welcom=Welcome to the program ESCOM-BPM WEB!
 welcom1=To enter, you must specify the user name and password
 welcom2=The user name must be specified in English!
 User=User
@@ -597,3 +597,13 @@ SaveSettings=Save settings
 Owner=Owner
 ChangeOwner=Change owner
 FolderType=File folder
+Message=Message
+Report=Report
+DocReportCountTypes=Count documents by type
+Reports=Reports
+PeriodSelected=The eligibility period
+DateEnd=Date end
+DateBegin=Date begin
+ADD_VERSION=Add version
+ViewCard=View card
+GetLinkForEdit=Get link for edit
