--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -144,3 +144,5 @@ NeedUpdateProgram=You need to update the program!
 AddStatusInSelectedDocumentTypes=Add status in the selected document types
 ObjectDontHaveRightView=Object dont have right view
 ObjectIsLockUser=Object ''{0}'' is lock user ''{1}''
+NeedSelectOneGroup=You must select at least one group!
+VersionAdded=Version added!
