--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -81,7 +81,7 @@ ERR_INCORECT_SET_INTERVAL=Incorect set interval timeoute
 NeedUpdateSystem=A new version of the program. It is recommended to install the update!
 GetInfoAboutNewversion=To receive information about new versions of the program
 UserPreviouslyLogged=The user has previously logged on to the program
-ErrorExpireLicence=The term of the license expired
+ErrorExpireLicence=The term of the license expired (''{0}'')!
 NO_GET_DOC_URL=Failed to get a reference to the document because the document has no file attachments
 LoadedDocHelp=If document download does not start automatically, click on this link
 FileNotFound=File not found!
@@ -146,3 +146,4 @@ ObjectDontHaveRightView=Object dont have right view
 ObjectIsLockUser=Object ''{0}'' is lock user ''{1}''
 NeedSelectOneGroup=You must select at least one group!
 VersionAdded=Version added!
+ERROR_INIT_USER_SETTINGS=Error init user personal settings!
