--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -473,3 +473,12 @@ DateBegin=Date begin
 ADD_VERSION=Add version
 ViewCard=View card
 GetLinkForEdit=Get link for edit
+SettingLock=Setting the lock
+DatePlanUnlock=The planned unlock date
+DateAutoUnlock=Date planned automatic removal lock
+Attention=Attention!
+DateLock=Date lock
+Editor=Editor
+DateUnLock=Date unlock
+LockedTo=Locked to
+EditDoc=Edit document
