--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -147,3 +147,7 @@ ObjectIsLockUser=Object ''{0}'' is lock user ''{1}''
 NeedSelectOneGroup=You must select at least one group!
 VersionAdded=Version added!
 ERROR_INIT_USER_SETTINGS=Error init user personal settings!
+SettingLockDocInfo=Editing the document is accompanied by the installation of blocking. If specified in the "lock Period" of time the lock is released, the document will be automatically unlocked. Before automatically unlocking You will be sent several notices about the need to remove the lock. If You need more time to edit the document, then just change the time in the "Time lock". Information about the locks You have set are displayed in the filter "on my editing."
+SetLockDocAndOpenFile=After clicking the "Save" button lock will be installed at the specified time, the file is opened for editing.
+Attention=Attention!
+DocumentDoNotContainMajorVersion=This document does not contain a major version. Open the document and under "Version" select the version you want to edit.
