--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-welcom=Welcome to the program ESCOM-BPM WEB!
+welcom=Welcome to the program
 welcom1=To enter, you must specify the user name and password
 welcom2=The user name must be specified in English!
 User=User
@@ -616,3 +616,32 @@ Editor=Editor
 DateUnLock=Date unlock
 LockedTo=Locked to
 EditDoc=Edit document
+SetLock=Set lock
+SetUnLock=Unlock
+EditFile=Edit file
+LockPeriod=Lock period 
+UnLock=Unlock
+RestartTimer=To restart the timer
+Messages=Messages
+DateSend=Date send
+DateRead=Data read
+MarkAsRead=Mark as read
+ShowOnlyUnReadMessage=Show only unread message
+GoToDocument=Go to document
+System=System
+DuplicateMessagesEmail=Duplicate messages e-mail
+NoNewMessages=No new messages
+ReadIs=Read
+CountNewMessages=new messages
+OnMyEdit=On my edit
+SetLockAndEdit=SetLock and start edit file
+OneTimeStartup=One-time startup
+GetURLforView=Get URL for view document
+GetURLforOpenCard=Get URL for open \u0441ard
+Locked=Locked
+CopyToClipboard=Copy to clipboard: Ctrl+C, Enter
+ProgramName=ESCOM-BPM WEB
+File=File
+SendToEmailAsLinkPDF=Send to email as link for view as pdf
+SendToEmailAsLinkCard=Send to email as link for open card
+SendToEmailAsPDF=Send to email as attache PDF
