--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -147,7 +147,15 @@ ObjectIsLockUser=Object ''{0}'' is lock user ''{1}''
 NeedSelectOneGroup=You must select at least one group!
 VersionAdded=Version added!
 ERROR_INIT_USER_SETTINGS=Error init user personal settings!
-SettingLockDocInfo=Editing the document is accompanied by the installation of blocking. If specified in the "lock Period" of time the lock is released, the document will be automatically unlocked. Before automatically unlocking You will be sent several notices about the need to remove the lock. If You need more time to edit the document, then just change the time in the "Time lock". Information about the locks You have set are displayed in the filter "on my editing."
-SetLockDocAndOpenFile=After clicking the "Save" button lock will be installed at the specified time, the file is opened for editing.
+SettingLockDocInfo=Edit the document file is accompanied by the installation of blocking. If specified in the "lock Period" the time You won't unlock it, the file will be automatically unlocked. However, if You have not saved changes to the file, they will be lost. Before automatically unlocking You will be sent several notices about the need to remove the lock. If You need more time to edit, just change the time in the "Time lock". Information about the locks You have set are displayed in the filter "on my editing."
+SetLockDocAndOpenFile=After clicking the "Set lock" button lock will be installed at the specified time, the file is opened for editing.
 Attention=Attention!
-DocumentDoNotContainMajorVersion=This document does not contain a major version. Open the document and under "Version" select the version you want to edit.
+DocumentDoNotContainMajorVersion=This document does not contain a major version. Open the document and under "Version" select the version you want to open.
+SetUnLockDoc=Before removing the lock, save the file in the editor and close the editor. To unlock, press "Unlock".
+TimerRestarted=The timer is restarted
+YouNeedUnlockDocument=You need to unlock taken to edit the document!
+DocumentWasAutoUnlocked=You are taken to the edit document was automatically unlocked!
+DocumentWilBeAutomaticallyUnlocked=The document will be automatically unlocked "{0}"
+YouHaveUnreadMessage=You have a new unread message (''{0}'')!
+NoNewMessages=No new messages
+RequiresProtocolInstallation=This action requires a protocol installation. Select OK to download the protocol installer.
