--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -511,3 +511,5 @@ File=File
 SendToEmailAsLinkPDF=Send to email as link for view as pdf
 SendToEmailAsLinkCard=Send to email as link for open card
 SendToEmailAsPDF=Send to email as attache PDF
+LinkForDownloadDocument=Link for download document
+LinkForViewDocumentInProgram=Link for view document in program
