--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -648,10 +648,14 @@ SendToEmailAsPDF=Send to email as attache PDF
 LinkForDownloadDocument=Link for download document
 LinkForViewDocumentInProgram=Link for view document in program
 Draft=Draft
-Archival=Archival
+Arhival=Archival
 Current=Current
 Valid=Valid
 TypeFilledGroup=The group members filled in
-InPropertiesGroup\ =in the properties group
+InPropertiesGroup=in the properties group
 InCardObject=in the card object
 SystemRoleName=The system name of the role
+ForRole=For role
+Administrator=Administrator
+Administrators=Administrators
+RightForRole=Rights for role
