--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -673,3 +673,12 @@ Rotate=Rotate
 Rotate180=Rotate 180\u00b0
 RotateLeft=Rotate left
 RotateRight=Rotate \u043aight
+GotoFirst=Goto first
+GotoLast=Goto last
+GotoBack=Goto back
+GotoNext=Goto next
+From=from
+PreviewMode=Preview mode
+ShowInEditor=Show in editor
+Scaner=Scaner
+MakeMainVersion=Make main version
