--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -548,3 +548,6 @@ PreviewMode=Preview mode
 ShowInEditor=Show in editor
 Scaner=Scaner
 MakeMainVersion=Make main version
+RightsForObject=Access rights to the object
+AddChildsRight=Add childs
+Correction=Correction
