--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -159,3 +159,4 @@ DocumentWilBeAutomaticallyUnlocked=The document will be automatically unlocked "
 YouHaveUnreadMessage=You have a new unread message (''{0}'')!
 NoNewMessages=No new messages
 RequiresProtocolInstallation=This action requires a protocol installation. Select OK to download the protocol installer.
+RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
