--- a/escom-bpm-resource/src/main/resources/locale/Bundle.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle.properties
@@ -9,7 +9,7 @@ SelectOneMessage=Select One...
 Home=Home
 Maintenance=Maintenance
 AppName=com.maxfill.escombpm2
-Accept=Author:
+Accept=Accept
 MoveToTrash=Move to trash
 IsActual=IsActual
 UsersSelector=Users select
@@ -551,3 +551,8 @@ MakeMainVersion=Make main version
 RightsForObject=Access rights to the object
 AddChildsRight=Add childs
 Correction=Correction
+EditVersion=Edit version
+Licensor=Licensor
+AgreeLicenseConfirm=Accept the license agreement
+AcceptAndClose=Accept license and close form
+LicenceStandartType=Standart
