--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -685,3 +685,8 @@ MakeMainVersion=Make main version
 RightsForObject=Access rights to the object
 AddChildsRight=Add childs
 Correction=Correction
+EditVersion=Edit version
+Licensor=Licensor
+AgreeLicenseConfirm=Accept the license agreement
+AcceptAndClose=Accept license and close form
+LicenceStandartType=Standart
