--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -34,7 +34,7 @@ AccessRightsNoChanged=Access rights no changed
 RightIsParentCopy=Rights copied from the parent object
 RightEditNo=You do not have permissions to change the object ''{0}''!
 RightCreateNo=You do not have rights to create the object ''{0}''!
-RightDeleteNo=If You do not have sufficient permissions to delete object ''{0}''!
+RightDeleteNo=You do not have permissions to delete object {0} ''{1}''!
 RightViewNo=You do not have permissions to view this item!
 FolderIsCopy=Folder copied!
 DocIsCopy=Document copied!
