--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -115,7 +115,7 @@ ReplaceCompleted=Replace completed!
 DoNotSpecifyValueReplacement=Do not specify a value for replacement!
 PostUsedInStaffs=Post {0} used in staffs
 DocTypeUsedInFolders=Doc type {0} used in folders
-ObjectIsCopied=Object {0} is copied!
+ObjectIsCopied=Object ''{0}'' is copied!
 ObjectAlreadyOpened=This object is already opened for editing by the user {0}
 RightIsInherits=Right is inherits
 RightNotInherits=Right not inherits
@@ -160,3 +160,4 @@ YouHaveUnreadMessage=You have a new unread message (''{0}'')!
 NoNewMessages=No new messages
 RequiresProtocolInstallation=This action requires a protocol installation. Select OK to download the protocol installer.
 RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
+StatusesNotFound=Statuses for load not found!
