--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -177,7 +177,7 @@ Users=Users
 FIO=Name
 Posts=Posts
 Id=Id
-GotoIndex=Return to main page
+GotoIndex=Go to main menu page
 PartnersExpl=Partners explorer
 UsersSelector=Users select
 UsersGroups=Users groups
@@ -690,3 +690,5 @@ Licensor=Licensor
 AgreeLicenseConfirm=Accept the license agreement
 AcceptAndClose=Accept license and close form
 LicenceStandartType=Standart
+NavigatorBar=Navigation bar
+MarkAllAsRead=Mark all records as read
