--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -103,7 +103,7 @@ StaffUsedInDocs=Staff ''{0}'' used in the documents
 StaffUsedInUsers=Staff ''{0}'' unit tied to user accounts!
 PartnerUsedInDocs=The partner ''{0}'' used in documents!
 DocTypeUsedInDocs=The type ''{0}'' used in documents!
-PartnerCodeIsExsist=Partner code {0} already exists!
+PartnerCodeIsExsist=In data base already exists partner ''{0}'' with code ''{1}''!
 PartnerIsExsist=Partner ''{0}'' already exsist!
 ObjectAddedToFavorites=The object ''{0}'' is added to favorites
 NotExecuted=Not executed!
