--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -692,3 +692,6 @@ AcceptAndClose=Accept license and close form
 LicenceStandartType=Standart
 NavigatorBar=Navigation bar
 MarkAllAsRead=Mark all records as read
+SearcheDateDoc=Searche for date document
+ForCreateObjectNeedSelectGroup=For create object need select group
+Group=Group
