--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -161,3 +161,4 @@ NoNewMessages=No new messages
 RequiresProtocolInstallation=This action requires a protocol installation. Select OK to download the protocol installer.
 RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
 StatusesNotFound=Statuses for load not found!
+AccessDeniedAddChilds=You can not add child object for ''{0}''!
