--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -695,3 +695,4 @@ MarkAllAsRead=Mark all records as read
 SearcheDateDoc=Searche for date document
 ForCreateObjectNeedSelectGroup=For create object need select group
 Group=Group
+PartnerForNewDocs=Partner for new documents
