--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -696,3 +696,4 @@ SearcheDateDoc=Searche for date document
 ForCreateObjectNeedSelectGroup=For create object need select group
 Group=Group
 PartnerForNewDocs=Partner for new documents
+EnterToProgram=Enter to the program
