--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -697,3 +697,8 @@ ForCreateObjectNeedSelectGroup=For create object need select group
 Group=Group
 PartnerForNewDocs=Partner for new documents
 EnterToProgram=Enter to the program
+InheritDocType=Inherit document type
+InheritPartner=Inherit partner
+InheritCompany=Inherit \u0441ompany
+InheritParams=Inherit parametrs for new documents
+CompanyForNewDoc=Company for new document
