--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -286,7 +286,7 @@ Numerator=Numerator
 Numerators=Numerators
 NumeratorsPatterns=Numerators patterns
 Pattern=Pattern
-LeadingZeros=Leading zeros
+LeadingZeros=Len ordinal numbers
 Generate=Generate
 Mask=Input mask
 Type=Type
@@ -296,7 +296,7 @@ PatternAutoGenerate=Pattern auto generate
 InputNameNumerator=Input name for numerator
 NUMERATOR_NO_SET=Numerator is not set!
 DOCTYPE_NO_SET=Document type is not set!
-ResetNewYear=Reset counter on New year
+ResetNewYear=Reset counter ordinal numbers on new year
 REGNUMBER_IS_DUBLICATE=Registration number is dublicate!
 Organization=Organization
 UnRegistred=cancel registration
@@ -702,3 +702,15 @@ InheritPartner=Inherit partner
 InheritCompany=Inherit \u0441ompany
 InheritParams=Inherit parametrs for new documents
 CompanyForNewDoc=Company for new document
+PatternManual=Pattern for manual input number
+TestPattern=Test pattern
+NamePattern=Name pattern
+ManualPatternHelp1=9 - any digit (0-9), a - any letter (a-Z), * any letter or digit, ? next input is not necessarily
+ManualPatternHelp2=The number of words is determined by the number of pattern characters. For example, a-9999/99 room will consist of nine characters.
+PatternMask=Pattern mask
+InputMask=Input mask
+TestMask=Test mask
+CountNumberMaskInfo=Len ordinal numbers must equal the number in mask symbols ordinal numbers!
+MakeMask=Make mask
+MaxLenght2=Maximum lenght 2 char!
+MaxLenght3=Maximum lenght 3 char!
