--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -51,7 +51,7 @@ Info=Info
 NO_SEARCHE_PARAMS=Not specified search parameters
 NO_SEARCHE_FIND=According to the specified search criteria is found nothing
 NO_SEARCHE_GROUPS=Not specified search group!
-DocIsRegistred=Document is registred
+DocIsRegistred=Document is registred!
 DocIsRegAndLock=If you want to change locked fields of the document, then click unregister
 DocRegCanceled=Document registration canceled
 DocIsEnableEditing=The document is available for editing
@@ -133,7 +133,7 @@ CheckRights=Check the setting of access rights!
 RightsInheritedForChilds=Rights to documents of this folder are inherited from the parent folder
 DocumentsHaveSpecRights=For documents this folder has special rights. Set check for inherits!
 ObjectNotCopied=A copy of the object ''{0}'' is not available!
-MoveItemNotAvailable=The movement of the object ''{0}'' is not available!
+MoveItemNotAvailable=The movement of the ''{0}'' in ''{1}'' is unacceptable!
 RightsInheritedForChildDocs=Rights to documents of this folder are inherited from the parent folder
 RightsNotInheritedForChilds=Rights for child items not innherit!
 RightsChildInheritIncorrect=Inherit incorrect for rights childs! Object dont have parent for inherit!
@@ -162,3 +162,4 @@ RequiresProtocolInstallation=This action requires a protocol installation. Selec
 RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
 StatusesNotFound=Statuses for load not found!
 AccessDeniedAddChilds=You can not add child object for ''{0}''!
+PatternIsEmpty=Pattern is empty!
