--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -714,3 +714,6 @@ CountNumberMaskInfo=Len ordinal numbers must equal the number in mask symbols or
 MakeMask=Make mask
 MaxLenght2=Maximum lenght 2 char!
 MaxLenght3=Maximum lenght 3 char!
+LinkedDoc=Linked documents
+MainDoc=Main document
+Links=Links
