--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -717,3 +717,11 @@ MaxLenght3=Maximum lenght 3 char!
 LinkedDoc=Linked documents
 MainDoc=Main document
 Links=Links
+MarkSelectedAsRead=Mark selected records as read
+MarkAsReads=Mark selected as read
+CollapseTree=Collapse tree
+ExpandTree=Expand tree
+CreateNewVersion=Create new version
+SaveWithOutCreateVersion=Save changes without create version
+DoNotSaveChanges=Do not save \u0441hanges
+DocJournal=Documents journal report
