--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -725,3 +725,10 @@ CreateNewVersion=Create new version
 SaveWithOutCreateVersion=Save changes without create version
 DoNotSaveChanges=Do not save \u0441hanges
 DocJournal=Documents journal report
+CountersNumbers=Numerators \u0441ounters 
+Year=Year
+AddRight=Add right
+DeleteState=Delete state
+AddState=Add state
+StartState=Start state
+MakeAsStartState=Make as start state
