--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -163,3 +163,7 @@ RightAddChildsNo=You do not have rights to add childs for object ''{0}''!
 StatusesNotFound=Statuses for load not found!
 AccessDeniedAddChilds=You can not add child object for ''{0}''!
 PatternIsEmpty=Pattern is empty!
+CantDeleteStartState=Cant delete start state!
+StartSateIsChange=Start sate is change!
+StateIsAdd=State is added!
+CantRemoveUsedState=Cant remove used state!
