--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -167,3 +167,4 @@ CantDeleteStartState=Cant delete start state!
 StartSateIsChange=Start sate is change!
 StateIsAdd=State is added!
 CantRemoveUsedState=Cant remove used state!
+PasteCopiedObjectDone=Paste the copied object is done!
