--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -732,3 +732,7 @@ DeleteState=Delete state
 AddState=Add state
 StartState=Start state
 MakeAsStartState=Make as start state
+FullTextSearche=Full text searche
+FullTextSearcheMode=Full text searche in attaches and card title
+KeyWord=Key word
+KeyWordSearche=Key word for searche
