--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -736,3 +736,6 @@ FullTextSearche=Full text searche
 FullTextSearcheMode=Full text searche in attaches and card title
 KeyWord=Key word
 KeyWordSearche=Key word for searche
+ServiceReaderEmail=Processing service incoming mail
+UseSSL=Use SSL
+IMAPport=IMAP port
