--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -168,3 +168,4 @@ StartSateIsChange=Start sate is change!
 StateIsAdd=State is added!
 CantRemoveUsedState=Cant remove used state!
 PasteCopiedObjectDone=Paste the copied object is done!
+SelectedFolderCantNotAddDocs=In the selected folder, you cannot add documents
