доработка всего-всего

--- a/escom-bpm-resource/src/main/resources/locale/validator_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/validator_en.properties
@@ -2,3 +2,4 @@
 #
 INVALID_EMAIL=Invalid email adress!
 CHECK_ERROR=Check error
+DUBLICATE_EMAIL=E-mail '{0}' address is duplicated! E-mail address must be unique!
