доработка всего-всего

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -41,7 +41,7 @@ Cancel=Cancel
 Columns=Columns
 ChooseTheme=Choose Theme
 Error=Error
-ErrorSaveSettings=Failed to save current setting user
+ErrorSaveSettings=Failed to save current setting!
 Help=Help
 SearcheCriteria=Criteria searche
 Select=Select
@@ -740,3 +740,5 @@ ServiceReaderEmail=Processing service incoming mail
 UseSSL=Use SSL
 IMAPport=IMAP port
 FolderSelector=Select folder
+DeleteAfterLoad=Delete messages after load
+DeleteIfUnknownSender=Delete if the sender is unknown
