доработка загрузки e-mail сообщений

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -742,3 +742,4 @@ IMAPport=IMAP port
 FolderSelector=Select folder
 DeleteAfterLoad=Delete messages after load
 DeleteIfUnknownSender=Delete if the sender is unknown
+ReadOnlyNewMsg=Read only new messages
