доработка поиска, создана двуфакторная аутентификация

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -71,7 +71,7 @@ bundle.EmptyField=Field must be filled!
 Confirm=Confirm
 InfoOnCloseBrouser=Attention! The forced closing of the browser will lock Your account for 5 minutes!!!
 Version=Version
-DeveloperInfo=\u00A9 MaxFill LLC. 2015-2016. All rights reserved
+DeveloperInfo=\u00A9 MaxFill LLC 2015-2018 All rights reserved
 ErrFileSize=It exceeds the file size!
 ShowVersion=show versions of a file
 Home=Home
@@ -743,3 +743,7 @@ FolderSelector=Select folder
 DeleteAfterLoad=Delete messages after load
 DeleteIfUnknownSender=Delete if the sender is unknown
 ReadOnlyNewMsg=Read only new messages
+DoubleFactorAuth=Use two-factor authorization (send access code to SMS)
+PhoneForSMS=Phone to receive SMS
+AccessCode=Access code
+UserAccount=User account
