--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -170,3 +170,6 @@ CantRemoveUsedState=Cant remove used state!
 PasteCopiedObjectDone=Paste the copied object is done!
 SelectedFolderCantNotAddDocs=In the selected folder, user cannot add documents!
 TestMailInbox=The connection to the server {0} is established. In the mailbox contained {1} message(s). {2} of them are unread.
+SendCheckCodePhone=The phone number {0} sent an SMS message with the access code
+BadAccessCode=Incorrect access code
+YourAccessCode=Your access code to enter the ESCOM program: {0}
