очистка критериев поиска, лог аутентификации (сервер) ограничение числа смс проверка наличия моб.телефона у пользователя

--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -10,11 +10,11 @@ ErrorFileOperation=The operation failed with a file
 ErrorFileDelete=Failed to remove the file
 FilesOperation=File operation
 FileIsDelete=File deleted
-Error=Error
+Error=Error!
 ErrorSaveSettings=Failed to save current settings!
 ErrorLogin=Login is forbidden!
 ErrorLoginDetail=The entrance is not possible, because the the user has already logged in
-Successfully=Successfully
+Successfully=Successfully!
 InfoDocIsSavingAndProcessing=The document is saved and queued for processing. Processing time 1 minute.
 File=File
 SaveOnServer=stored on the server
@@ -24,7 +24,7 @@ ErrorSQLConnectDetail=When connecting to SQL server error occurred.
 ErrorSQLConnect=The SQL server is not available.
 ErrorCountLogin=Exceeded the number of login attempts to the system! The log will be locked for 1 minutes.
 ErrorSaveRecord=\u041F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0437\u0430\u043F\u0438\u0441\u0438 \u0432\u043E\u0437\u043D\u0438\u043A\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430
-Warning=Warning
+Warning=Warning!
 InfoFolderIsModerated=The selected folder is moderated
 InfoCreateDocInFolder=The document will be displayed in the folder only after it is processed by the server system ESCOM.BPM
 DontDrop=Move is not allowed
@@ -173,3 +173,4 @@ TestMailInbox=The connection to the server {0} is established. In the mailbox co
 SendCheckCodePhone=The phone number {0} sent an SMS message with the access code
 BadAccessCode=Incorrect access code
 YourAccessCode=Your access code to enter the ESCOM program: {0}
+NeedSetMobilePhone=To receive SMS you need to specify a mobile phone!
