доработал базовый диалог но не до конца, ошибки поправил

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -747,3 +747,15 @@ DoubleFactorAuth=Use two-factor authorization (send access code to SMS)
 PhoneForSMS=Phone to receive SMS
 AccessCode=Access code
 UserAccount=User account
+PersonalSettings=Personal settings
+Weak=weak
+Good=good
+Strong=strong
+InputNewPassword=Input new password
+PersonalSettingsInfo=Change the user's password and other settings
+Logging=Logging
+Authentication=Authentication
+AuthenticationLog=Authentication log
+SMSisSend=SMS sent
+UserEnter=The user is logged in to the program
+UserExit=The user quit the program
