--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -88,7 +88,7 @@ FileNotFound=File not found!
 DocumentNotFound=Document not found!
 PasswordsNotMatch=Passwords do not match!
 #\u041F\u0430\u0440\u043E\u043B\u044C \u043D\u0435 \u0432\u0435\u0440\u043D\u044B\u0439!
-PasswordIncorrect=Password incorrect!
+PasswordIncorrect=The current password is not correct!
 PasswordIsChange=Password change!
 UsedLDAPauth=You use authentication through LDAP. To change the password, contact your LDAP administrator
 SeparatedMultipleAddresses=Multiple addresses must be separated by a comma!
@@ -174,3 +174,7 @@ SendCheckCodePhone=The phone number {0} sent an SMS message with the access code
 BadAccessCode=Incorrect access code
 YourAccessCode=Your access code to enter the ESCOM program: {0}
 NeedSetMobilePhone=To receive SMS you need to specify a mobile phone!
+PasswordSecurityRequirements=The new password does not meet the security requirements!
+PasswordSecurityInfo=Password requirements: length must be greater than 7 characters, at least one uppercase letter, at least one special character !@#$%^&_+=*, a minimum two numerals, one letter in lower case
+PasswordLengthIncorrect=The password must be between 8 and 16 characters long!
+PassordMustDifferent=The new password must be different from the old one!
