--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -759,3 +759,7 @@ AuthenticationLog=Authentication log
 SMSisSend=SMS sent
 UserEnter=The user is logged in to the program
 UserExit=The user quit the program
+ExportToExcel=Export to excel
+ExportToPDF=Export to PDF
+ExportToCSV=Export to CSV
+ExportToXML=Export to XML
