--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -178,3 +178,4 @@ PasswordSecurityRequirements=The new password does not meet the security require
 PasswordSecurityInfo=Password requirements: length must be greater than 7 characters, at least one uppercase letter, at least one special character !@#$%^&_+=*, a minimum two numerals, one letter in lower case
 PasswordLengthIncorrect=The password must be between 8 and 16 characters long!
 PassordMustDifferent=The new password must be different from the old one!
+RemovedEntries=Removed {0} entries
