--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -763,3 +763,7 @@ ExportToExcel=Export to excel
 ExportToPDF=Export to PDF
 ExportToCSV=Export to CSV
 ExportToXML=Export to XML
+Portret=Portret
+Landscape=Landscape
+ExportIn=Export in
+OnlyCurrentPage=Only current page
