lazy загрузка в журнале аутентификации

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -767,3 +767,4 @@ Portret=Portret
 Landscape=Landscape
 ExportIn=Export in
 OnlyCurrentPage=Only current page
+WillBeDeleted={0} records will be deleted!
