--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -1,7 +1,6 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-
 SessionTimeout=Sorry, Your session has expired!
 BadUserOrPassword=The specified user or password is incorrect. If You dont know your username or password, contact your administrator!
 EnterIsClosed=Login is forbidden!
@@ -179,3 +178,4 @@ PasswordSecurityInfo=Password requirements: length must be greater than 7 charac
 PasswordLengthIncorrect=The password must be between 8 and 16 characters long!
 PassordMustDifferent=The new password must be different from the old one!
 RemovedEntries=Removed {0} entries
+WillBeDeleted={0} records will be deleted
