lazy загрузка в журнале аутентификации

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -768,3 +768,7 @@ Landscape=Landscape
 ExportIn=Export in
 OnlyCurrentPage=Only current page
 WillBeDeleted={0} records will be deleted!
+ForNomenklature=For the nomenclature of cases
+IndexCase=Index case
+Header=Header
+Case=Case
