--- a/escom-bpm-resource/src/main/resources/locale/validation_msg_ru.properties
+++ b/escom-bpm-resource/src/main/resources/locale/validation_msg_ru.properties
@@ -76,11 +76,11 @@
 # ==============================================================================
 # Component Errors
 # ==============================================================================
-javax.faces.component.UIInput.CONVERSION=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u0435\u043e\u0431\u0440\u0430\u0437\u043e\u0432\u0430\u043d\u0438\u044f"
-javax.faces.component.UIInput.REQUIRED=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: \u041f\u043e\u043b\u0435 \u0434\u043e\u043b\u0436\u043d\u043e \u0431\u044b\u0442\u044c \u0437\u0430\u043f\u043e\u043b\u043d\u0435\u043d\u043e!
-javax.faces.component.UIInput.UPDATE=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u043b\u0430 \u043e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u0438 \u0441\u043e\u0445\u0440\u0430\u043d\u0435\u043d\u0438\u0438 \u0438\u043d\u0444\u043e\u0440\u043c\u0430\u0446\u0438\u0438!
-javax.faces.component.UISelectOne.INVALID=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: \u0423\u043a\u0430\u0437\u0430\u043d\u043d\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u043d\u0435 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e!
-javax.faces.component.UISelectMany.INVALID=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: \u0423\u043a\u0430\u0437\u0430\u043d\u043d\u043e\u0435 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0435 \u043d\u0435 \u043a\u043e\u0440\u0440\u0435\u043a\u0442\u043d\u043e!
+javax.faces.component.UIInput.CONVERSION=\u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0435\u043E\u0431\u0440\u0430\u0437\u043E\u0432\u0430\u043D\u0438\u044F"
+javax.faces.component.UIInput.REQUIRED=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: \u041F\u043E\u043B\u0435 \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043E!
+javax.faces.component.UIInput.UPDATE=\u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u0438!
+javax.faces.component.UISelectOne.INVALID=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: \u0423\u043A\u0430\u0437\u0430\u043D\u043D\u043E\u0435 \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435 \u043D\u0435 \u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u043E!
+javax.faces.component.UISelectMany.INVALID=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: \u0423\u043A\u0430\u0437\u0430\u043D\u043D\u043E\u0435 \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435 \u043D\u0435 \u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u043E!
 
 # ==============================================================================
 # Converter Errors
@@ -130,17 +130,17 @@ javax.faces.converter.STRING={1}: Could not convert ''{0}'' to a string.
 # ==============================================================================
 # Validator Errors
 # ==============================================================================
-javax.faces.validator.DoubleRangeValidator.MAXIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is greater than allowable maximum of "{0}"
-javax.faces.validator.DoubleRangeValidator.MINIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is less than allowable minimum of ''{0}''
-javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE={2}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Specified attribute is not between the expected values of {0} and {1}.
-javax.faces.validator.DoubleRangeValidator.TYPE={0}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is not of the correct type
-javax.faces.validator.LengthValidator.MAXIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Length is greater than allowable maximum of ''{0}''
-javax.faces.validator.LengthValidator.MINIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Length is less than allowable minimum of ''{0}''
-javax.faces.validator.LongRangeValidator.MAXIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is greater than allowable maximum of ''{0}''
-javax.faces.validator.LongRangeValidator.MINIMUM={1}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is less than allowable minimum of ''{0}''
-javax.faces.validator.LongRangeValidator.NOT_IN_RANGE={2}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Specified attribute is not between the expected values of {0} and {1}.
-javax.faces.validator.LongRangeValidator.TYPE={0}: \u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Value is not of the correct type.
-javax.faces.validator.NOT_IN_RANGE=\u041e\u0448\u0438\u0431\u043a\u0430 \u043f\u0440\u043e\u0432\u0435\u0440\u043a\u0438: Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM={1}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is greater than allowable maximum of "{0}"
+javax.faces.validator.DoubleRangeValidator.MINIMUM={1}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is less than allowable minimum of ''{0}''
+javax.faces.validator.DoubleRangeValidator.NOT_IN_RANGE={2}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.validator.DoubleRangeValidator.TYPE={0}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is not of the correct type
+javax.faces.validator.LengthValidator.MAXIMUM={1}: \u041D\u0435\u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u043E\u0435 \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435! \u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E\u0435 \u043A\u043E\u043B\u0438\u0447\u0435\u0441\u0442\u0432\u043E \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432 ''{0}''
+javax.faces.validator.LengthValidator.MINIMUM={1}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Length is less than allowable minimum of ''{0}''
+javax.faces.validator.LongRangeValidator.MAXIMUM={1}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is greater than allowable maximum of ''{0}''
+javax.faces.validator.LongRangeValidator.MINIMUM={1}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is less than allowable minimum of ''{0}''
+javax.faces.validator.LongRangeValidator.NOT_IN_RANGE={2}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Specified attribute is not between the expected values of {0} and {1}.
+javax.faces.validator.LongRangeValidator.TYPE={0}: \u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Value is not of the correct type.
+javax.faces.validator.NOT_IN_RANGE=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438: Specified attribute is not between the expected values of {0} and {1}.
 javax.faces.validator.RegexValidator.PATTERN_NOT_SET=Regex pattern must be set.
 javax.faces.validator.RegexValidator.PATTERN_NOT_SET_detail=Regex pattern must be set to non-empty value.
 javax.faces.validator.RegexValidator.NOT_MATCHED=Regex Pattern not matched
