lazy загрузка в журнале аутентификации

--- a/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/Bundle_en.properties
@@ -279,7 +279,7 @@ About=About
 ManualBook=Manual book
 Support=Support
 CheckUpdates=Check updates
-EscomWWW=Welcom to www.escom-bpm.com!
+EscomWWW=Go to the program website
 DocTypeGroup=Document type group
 DocTypeGroups=Document type groups
 Numerator=Numerator
@@ -772,3 +772,6 @@ ForNomenklature=For the nomenclature of cases
 IndexCase=Index case
 Header=Header
 Case=Case
+AutoFillDocuments=AutoFill documents
+Inherit=Inherit
+Sessions=Sessions
