--- a/escom-bpm-resource/src/main/resources/locale/messages_en.properties
+++ b/escom-bpm-resource/src/main/resources/locale/messages_en.properties
@@ -179,3 +179,6 @@ PasswordLengthIncorrect=The password must be between 8 and 16 characters long!
 PassordMustDifferent=The new password must be different from the old one!
 RemovedEntries=Removed {0} entries
 WillBeDeleted={0} records will be deleted
+Saved=Saved!
+LicenseExpired=The term of the license {0} expires {1}! Access will be blocked after {2} days!
+UpdateInformation=Information about the extension
